spade-tests/src/snapshots/spade_tests__ast_lowering__tests__duplicate_label_error.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Stage a was already defined
  ┌─ testinput:5:10
  │
3 │         'a
  │          - Previous definition
4 │     reg;
5 │         'a
  │          ^ duplicate pipeline stage


